First tool -> get-result-files